--- a/web/index.html
+++ b/web/index.html
@@ -165,6 +165,24 @@
         });
       }
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-remote-config.js"></script>
+    <script>
+      var  firebaseConfig = {
+  apiKey: "AIzaSyBCxW6Z6RheHaoi-x_fVchjEYK5E1lVa54",
+  authDomain: "naren-portfolio.firebaseapp.com",
+  databaseURL: "https://naren-portfolio-default-rtdb.firebaseio.com",
+  projectId: "naren-portfolio",
+  storageBucket: "naren-portfolio.appspot.com",
+  messagingSenderId: "299558925453",
+  appId: "1:299558925453:web:dd67ccf11d55b677219ec4",
+  measurementId: "G-2VF91P346S"
+};
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+
+    </script>
     <script src="main.dart.js" type="application/javascript"></script>
   </body>
 </html>
